# python-flask-01

./: .replit  README.md  app.py  pyproject.toml
templates/: home.html  jobitem.html  nav.html
